	  to fix 'Error: .size expression for idle_stack does not evaluate to
	  a constant" (2014-1-25).
	* arch/arm/include/efm32, arch/arm/src/efm32, and configs/efm32-dk360:
	  Removed all EFM32 support.  Not yet ready to be fielded (2014-1-27).
	* arch/arm/src/armv7-a/arm_head.S, sama5/sam_boot.c, and several other
	  files:  Now supports execution from NOR FLASH with .data and .bss in
	  SDRAM.  This was not possible prior to this because .bss and .data
	  were initialized before SDRAM was configured.  This logic is still
	  kind buggy. (2014-1-28).
	* arch/arm/src/armv7-a/arm_head.S and arm_pghead.S:  Back off to a
	  somewhat less efficient loop for initializing .data and .bss.  The
	  original, efficient logic violated the ARM C ABI.  It was okay when
	  called from boot logic, but not when called from C logic.  This fixes
	  bugginess reported on 2014-1-28. (2014-1-29).

6.34 2014-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/lm/lm_serial.c:  Fix cut'n'paste error that prevented
	  UARTS2-7 from being used with the LM4F120 Launchpad (2014-02-03).
	* configs/stm32f4discovery/src: Almost everything renamed to confgorm
	  to the ever-evolving naming standard (2014-02-03).
	* arch/arm/src/a1x/a1x_serial.c:  Had the same cut'n'paster error
	  that the LM4f120 Launchpad had (2013-02-03).
	* Documentation/NuttXCCodingStandard.html:  Add a coding standards
	  document.  Very boring stuff (2014-2-6).
	* Several changes to restore the native Windows build (2014-2-7).
	* arch/arm/src/lpc17xx/lpc17_usbhost.c: Fix an compilation error
	  that crept intot he LPC17xx USB host driver.  What happened here?
	  (2014-2-9).
	* drivers/usbhost/usbhost_hidmouse.c and other files:  Add support
	  for a HID boot mouse device.  It compiles but is otherwise
	  completely untested on initial check-in (2014-2-9).
	* configs/olimex-lpc1766stk/src/lpc17_hidmouse.c and hidmouse: Add
	  support of a test of the USB HID mouse (2014-2-9).
